Rename DSO areas
