# swagger_server/adapters/market_adapter.py
@@ -49,26 +49,28 @@ class MarketAdapter:
         return [{'value': val['value'], 'start_time': val['startTime'], 'end_time': val['endTime']} for val in json.loads(result.content)[0]['values']]
 
     def fmp(self, location_ids):
-        dataset = {'BSU1': [-10.27, -10.27, -10.27, -10.27, -10.27, -10.27, 0, 0, -9.59, -9.59,
-                            -9.54, -15, -15, -15, -9.94, -9.97, -9.59, -9.64, 1.83, 1.52, 1.51, 0.26, 0, -10.27],
-                   'BSU2': [2.98, 2.98, 2.98, 2.98, 2.98, 2.98, 11.43, 12.46, 13.74, 13.74, 15,
-                            3.55, 3.01, 3.01, 3.44, 3.41, 13.74, 12.02, 15, 12.55, 12.53, 12.04, 8.55, 2.98],
-                   'BSU3': [-10.27, -10.27, -10.27, -10.27, -10.27, -10.27, -10.27, -10.01, -9.92, -9.54, -9.17,
-                            -15, -15, -15, -9.26, -9.54, -9.54, -9.17, 1.83, 1.55, -9.65, 1.02, 0.61, 0.61],
-                   'BSU4': [2.98, 2.98, 2.98, 2.98, 2.98, 2.98, 2.98, 3.36, 3.25, 15, 15, 3.54, 3.54, 3.54, 15,
-                            15, 15, 15, 15, 12.57, 12, 12.07, 15, 15], }
+        dataset = {'DSO_AREA_1': [0] * 24,
+                   'DSO_AREA_2': [-10.27, -10.27, -10.27, -10.27, -10.27, -10.27, 0, 0, -9.59, -9.59,
+                                  -9.54, -15, -15, -15, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+                   'DSO_AREA_3': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 15,
+                                  3.55, 3.01, 3.01, 3.44, 3.41, 13.74, 12.02, 15, 12.55, 12.53, 12.04, 8.55, 2.98],
+                   'DSO_AREA_4': [-10.27, -10.27, -10.27, -10.27, -10.27, -10.27, -10.27, -10.01, -9.92, -9.54, -9.17,
+                                  -15, -15, -15, -9.26, -9.54, -9.54, -9.17, 1.83, 1.55, -9.65, 1.02, 0.61, 0.61],
+                   'DSO_AREA_5': [2.98, 2.98, 2.98, 2.98, 2.98, 2.98, 2.98, 3.36, 3.25, 15, 15, 3.54, 3.54, 3.54, 15,
+                                  15, 15, 15, 15, 12.57, 12, 12.07, 15, 15], }
 
         return [dataset[lid] for lid in location_ids]
 
     def fmq(self, location_ids):
-        dataset = {'BSU1': [-6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -0.05, -0.25, -6.88, -6.88, -6.87, -10.61,
-                            -10.4, -10.4, -6.93, -6.93, -6.88, -6.89, 0.93, 0.78, 0.77, 0, 0, -6.97],
-                   'BSU2': [3, 3, 3, 3, 3, 3, 8.47, 8.87, 10.34, 10.34, 11.24, 3, 3, 3, 3, 3, 10.34, 9.12,
-                            10.54, 8.83, 8.82, 8.69, 6.41, 3],
-                   'BSU3': [-6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -6.94, -6.93, -6.87, -6.82, -10.62,
-                            -10.62, -10.62, -6.83, -6.87, -6.87, -6.82, 0.93, 0.79, -6.89, 0.52, 0.31, 0.31],
-                   'BSU4': [3, 3, 3, 3, 3, 3, 3, 3, 3, 11.24, 10.85, 3, 3, 3, 10.94, 11.24, 11.24, 10.85, 10.54,
-                            8.83, 9.11, 8.67, 11, 11], }
+        dataset = {'DSO_AREA_1': [0] * 24,
+                   'DSO_AREA_2': [-6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -0.05, -0.25, -6.88, -6.88, -6.87, -10.61,
+                                  -10.4, -10.4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+                   'DSO_AREA_3': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 11.24, 3, 3, 3, 3, 3, 10.34, 9.12,
+                                  10.54, 8.83, 8.82, 8.69, 6.41, 3],
+                   'DSO_AREA_4': [-6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -6.97, -6.94, -6.93, -6.87, -6.82, -10.62,
+                                  -10.62, -10.62, -6.83, -6.87, -6.87, -6.82, 0.93, 0.79, -6.89, 0.52, 0.31, 0.31],
+                   'DSO_AREA_5': [3, 3, 3, 3, 3, 3, 3, 3, 3, 11.24, 10.85, 3, 3, 3, 10.94, 11.24, 11.24, 10.85, 10.54,
+                                  8.83, 9.11, 8.67, 11, 11], }
 
         return [dataset[lid] for lid in location_ids]
 
