# swagger_server/models/location.py
@@ -63,7 +63,7 @@ class Location(Model):
         :param id: The id of this Location.
         :type id: str
         """
-        allowed_values = ["BSU1", "BSU2", "BSU3", "BSU4"]  # noqa: E501
+        allowed_values = ["DSO_AREA_1", "DSO_AREA_2", "DSO_AREA_3", "DSO_AREA_4", "DSO_AREA_5"]  # noqa: E501
         if id not in allowed_values:
             raise ValueError(
                 "Invalid value for `id` ({0}), must be one of {1}"
